--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "main": "src/logger.js",
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "get-version": "echo $npm_package_version",
     "cz": "git-cz",
     "test": "jest",
@@ -61,8 +62,8 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^9.0.1",
-    "@commitlint/config-conventional": "^9.0.1",
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-conventional": "^9.1.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/github": "^7.0.7",
     "@semantic-release/npm": "^7.0.5",
@@ -70,7 +71,7 @@
     "commitizen": "^4.1.2",
     "conventional-changelog-conventionalcommits": "^4.3.0",
     "cz-conventional-changelog": "^3.2.0",
-    "eslint": "^7.3.1",
+    "eslint": "^7.5.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
@@ -79,5 +80,8 @@
     "husky": "^4.2.5",
     "jest": "^26.1.0",
     "semantic-release": "^17.1.1"
+  },
+  "resolutions": {
+    "lodash": "^4.17.19"
   }
 }
