--- a/package.json
+++ b/package.json
@@ -62,26 +62,26 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^9.1.2",
-    "@commitlint/config-conventional": "^9.1.1",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/github": "^7.0.7",
-    "@semantic-release/npm": "^7.0.5",
+    "@semantic-release/github": "^7.1.1",
+    "@semantic-release/npm": "^7.0.6",
     "@semantic-release/release-notes-generator": "^9.0.1",
-    "commitizen": "^4.1.2",
-    "conventional-changelog-conventionalcommits": "^4.3.0",
-    "cz-conventional-changelog": "^3.2.0",
-    "eslint": "^7.5.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.22.0",
+    "commitizen": "^4.2.2",
+    "conventional-changelog-conventionalcommits": "^4.4.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.12.1",
+    "eslint-config-standard": "^16.0.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "husky": "^4.2.5",
-    "jest": "^26.1.0",
-    "semantic-release": "^17.1.1"
+    "eslint-plugin-standard": "^4.0.2",
+    "husky": "^4.3.0",
+    "jest": "^26.6.1",
+    "semantic-release": "^17.2.1"
   },
   "resolutions": {
-    "lodash": "^4.17.19"
+    "npm-user-validate": "^1.0.1"
   }
 }
